--- a/sass/state/_mediaquery.scss
+++ b/sass/state/_mediaquery.scss
@@ -38,5 +38,12 @@
   h3 {
     font-size: 2em;
   }
+  .btncta__btn {
+    padding: 14px 30px 14px 90px;
+    font-size: 1.6em;
+  }
+  .footermain__item {
+    margin-bottom: 25px;
+  }
 
 }
