--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
     <!-- /.container-fluid -->
 </nav>
 
+<!-- section homepage -->
 <section class="section--homepage container-fluid">
     <div class="container homepage--container">
         <div class="homepage__logo--slogan">
@@ -47,7 +48,7 @@
                 <div class="col-md-3">
                     <img src="../logo.png">
                 </div>
-                <div class="col-md-9">
+                <div class="col-md-9 sectionhomepage__title__cta">
                     <div class="col-md-12">
                         <h1>KALFSVLEES VOOR ECHTE FIJNPROEVERS</h1>
                     </div>
@@ -107,61 +108,81 @@
         </div>
     </div>
 </section>
+
+<!-- section--corebusiness -->
 <section class="section--corebusiness">
     <div class="container container--corebusiness">
         <div class="row">
-            <div class="col-md-4 corebusiness__region">
-                <div class="corebusiness__img">
-                    <img src="../images/kalf.jpg">
+            <!-- corebusiness__region -->
+            <div class="col-md-4">
+                <div class="corebusiness__region">
+                    <div class="corebusiness__img">
+                        <img src="../images/kalf.jpg">
+                    </div>
+                    <div class="corebusiness__item">
+                        <p>Het kalfsvlees dat we u verkopen is onze specialiteit. Belgische witblauw kalveren worden
+                            gekocht
+                            bij plaatselijke boeren en worden gevoederd met producten afkomstig van ons eigen bedrijf.
+                            De dieren worden op stro gehouden en met de grootste zorgen op een diervriendelijke manier
+                            gekweekt. Het vlees dat deze kalveren afleveren is rosé van kleur en iets sterker van
+                            smaak.</p>
+                        <header>
+                            <h4 class="corebusiness__title">KALFSVLEES</h4>
+                        </header>
+                    </div>
                 </div>
-                <div class="corebusiness__item">
-                    <p>Het kalfsvlees dat we u verkopen is onze specialiteit. Belgische witblauw kalveren worden gekocht
-                        bij plaatselijke boeren en worden gevoederd met producten afkomstig van ons eigen bedrijf.
-                        De dieren worden op stro gehouden en met de grootste zorgen op een diervriendelijke manier
-                        gekweekt. Het vlees dat deze kalveren afleveren is rosé van kleur en iets sterker van smaak.</p>
-                    <header>
-                        <h4 class="corebusiness__title">KALFSVLEES</h4>
-                    </header>
-                </div>
+
             </div>
-            <div class="col-md-4 corebusiness__region">
-                <div class="corebusiness__img">
-                    <img src="../images/rund.jpg">
+            <!-- corebusiness__region -->
+            <div class="col-md-4">
+                <div class="corebusiness__region">
+                    <div class="corebusiness__img">
+                        <img src="../images/rund.jpg">
+                    </div>
+                    <div class="corebusiness__item">
+                        <p>Onze limousine runderen lopen in de zomer op onze weide en in de winter op stal.
+                            Ze worden gevoederd met ruwvoeders afkomstig van ons eigen bedrijf zodat de dieren op een
+                            rustige en ongeforceerde wijze kunnen groeien.
+                            Dit garandeert mals vlees, licht doorregend met een beetje vet om de typische smaak van het
+                            ras te garanderen.
+                        </p>
+                        <header>
+                            <h4 class="corebusiness__title">RUNDSVLEES</h4>
+                        </header>
+                    </div>
+
                 </div>
-                <div class="corebusiness__item">
-                    <p>Onze limousine runderen lopen in de zomer op onze weide en in de winter op stal.
-                        Ze worden gevoederd met ruwvoeders afkomstig van ons eigen bedrijf zodat de dieren op een
-                        rustige en ongeforceerde wijze kunnen groeien.
-                        Dit garandeert mals vlees, licht doorregend met een beetje vet om de typische smaak van het
-                        ras te garanderen.
-                    </p>
-                    <header>
-                        <h4 class="corebusiness__title">RUNDSVLEES</h4>
-                    </header>
-                </div>
+
             </div>
-            <div class="col-md-4 corebusiness__region">
-                <div class="corebusiness__img">
-                    <img src="../images/versnijden.jpg">
+            <!-- corebusiness__region -->
+            <div class="col-md-4">
+                <div class="corebusiness__region">
+                    <div class="corebusiness__img">
+                        <img src="../images/versnijden.jpg">
+                    </div>
+                    <div class="corebusiness__item">
+                        <p>Het vlees wordt versneden en verpakt bij een plaatselijke slager om de klant de versheid van
+                            ons
+                            product te kunnen garanderen.
+                            Uiteraard zijn wij ook bij dit proces zeer nauw betrokken, zodat de garanties die we bieden
+                            verzekerd blijven.
+                        </p>
+                        <header>
+                            <h4 class="corebusiness__title">VERSNIJDEN & VERPAKKEN</h4>
+                        </header>
+                    </div>
                 </div>
-                <div class="corebusiness__item">
-                    <p>Het vlees wordt versneden en verpakt bij een plaatselijke slager om de klant de versheid van ons
-                        product te kunnen garanderen.
-                        Uiteraard zijn wij ook bij dit proces zeer nauw betrokken, zodat de garanties die we bieden
-                        verzekerd blijven.
-                    </p>
-                    <header>
-                        <h4 class="corebusiness__title">VERSNIJDEN & VERPAKKEN</h4>
-                    </header>
-                </div>
+
             </div>
         </div>
     </div>
 </section>
+<!-- end section--corebusiness -->
+
 <footer class="footer">
     <div class="container footer--main">
         <div class="row">
-            <div class="col-md-4 contact--region">
+            <div class="col-md-4 footermain__item contact--region">
                 <!-- contact gegevens -->
                 <h5>Ons contacteren</h5>
 
@@ -174,10 +195,12 @@
                     </div>
                 </div>
                 <div class="email">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:steven.van.nijlen@telenet.be">Mailen kan ook</a>
+                    <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:steven.van.nijlen@telenet.be">Mailen
+                    kan ook</a>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!-- end contact--region -->
+            <div class="col-md-4 footermain__item footer--menu">
                 <!-- extra menu -->
                 <ul>
                     <a href="#">
@@ -191,7 +214,8 @@
                     </a>
                 </ul>
             </div>
-            <div class="col-md-4">
+            <!-- -->
+            <div class="col-md-4 footermain__item social">
                 <!-- social -->
                 <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false"
                      data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
