--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -2,6 +2,8 @@
 // @@ ++ Variables
 //================================
 $pink: #f6656a;
+$red: #B70A10;
 $bordeau: #6e0908;
 $grey: #adadad;
 $darkgrey: #888888;
+$blue-social: #3a80f1;
