--- a/templates/index.html
+++ b/templates/index.html
@@ -182,47 +182,62 @@
 <footer class="footer">
     <div class="container footer--main">
         <div class="row">
-            <div class="col-md-4 footermain__item contact--region">
+            <div class="col-md-4">
                 <!-- contact gegevens -->
-                <h5>Ons contacteren</h5>
+                <div class="footermain__item call-us--region">
+                    <div class="mobile--phone">
+                        <div class="footermain-item__icon">
+                            <i class="fa fa-phone fa-5x" aria-hidden="true"></i>
+                        </div>
+                        <header>
+                            <h5>BEL ONS</h5>
+                        </header>
+                        <div class="mobilephone__each">
+                            <i class="fa fa-mobile" aria-hidden="true"></i> +32479792529
+                        </div>
+                        <div class="mobilephone__each">
+                            <i class="fa fa-mobile" aria-hidden="true"></i> +32489805656
+                        </div>
+                    </div>
 
-                <div class="mobile--phone">
-                    <div class="mobilephone__each">
-                        <i class="fa fa-mobile" aria-hidden="true"></i> +32479792529
-                    </div>
-                    <div class="mobilephone__each">
-                        <i class="fa fa-mobile" aria-hidden="true"></i> +32489805656
-                    </div>
                 </div>
-                <div class="email">
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:steven.van.nijlen@telenet.be">Mailen
-                    kan ook</a>
-                </div>
+
             </div>
             <!-- end contact--region -->
-            <div class="col-md-4 footermain__item footer--menu">
-                <!-- extra menu -->
-                <ul>
-                    <a href="#">
-                        <li>HOME</li>
-                    </a>
-                    <a href="#">
-                        <li>BESTELLEN</li>
-                    </a>
-                    <a href="#">
-                        <li>CONTACT</li>
-                    </a>
-                </ul>
+            <div class="col-md-4">
+                <!--  -->
+                <div class="footermain__item contact--region">
+                    <div class="footermain-item__icon">
+                        <i class="fa fa-paper-plane fa-5x" aria-hidden="true"></i>
+                    </div>
+                    <header>
+                        <h5>Contacteer ons</h5>
+                    </header>
+                    <div class="email">
+                        <i class="fa fa-envelope-o" aria-hidden="true"></i>
+                        <a href="mailto:steven.van.nijlen@telenet.be">Dit kan via e-mail</a>
+                    </div>
+                    <div>
+                        Of via ons contactformulier
+                    </div>
+                </div>
+
             </div>
             <!-- -->
-            <div class="col-md-4 footermain__item social">
+            <div class="col-md-4">
                 <!-- social -->
-                <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false"
-                     data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-                    <blockquote cite="https://www.facebook.com/tKalfshuys/" class="fb-xfbml-parse-ignore">
-                        <a href="https://www.facebook.com/tKalfshuys/">T Kalfshuys</a>
-                    </blockquote>
+                <div class="footermain__item social--region">
+                    <div class="footermain-item__icon">
+                        <i class="fa fa-thumbs-up fa-5x" aria-hidden="true"></i>
+                    </div>
+                    <div class="fb-page" data-href="https://www.facebook.com/tKalfshuys/" data-small-header="false"
+                         data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                        <blockquote cite="https://www.facebook.com/tKalfshuys/" class="fb-xfbml-parse-ignore">
+                            <a href="https://www.facebook.com/tKalfshuys/">T Kalfshuys</a>
+                        </blockquote>
+                    </div>
                 </div>
+
             </div>
         </div>
         <div class="copyright">
