--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,6 +6,7 @@
 //=========================
 //@import "vendor/bootstrap.min";
 @import "vendor/font-awesome.min";
+@import "vendor/hamburgers";
 
 //=========================
 // @@ ++ Base
@@ -13,9 +14,8 @@
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans|Fjalla+One);
 @import "base/variables";
+@import "base/headings/headings";
 @import "base/globals";
-
-
 
 //=========================
 // @@ ++ Mixin
@@ -33,6 +33,9 @@
 // @@ ++ Components
 //========================
 @import "components/buttons";
+@import "components/navbar";
+@import "components/webforms/forms-global";
+@import "components/webforms/contact-form";
 
 //=======================
 // @@ ++ State
