--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -6,17 +6,32 @@
   display: inline-block;
 }
 .btncta__btn {
-  padding: 10px 30px 10px 90px;
+  padding: 10px 10px 0px 10px;
   background-color: transparent;
   border: solid 1px #ffffff;
-  background-image: url("../images/icon_rund.png" );
-  background-position: left;
-  background-repeat: no-repeat;
+  //background-image: url("../images/icon_rund.png" );
+  //background-position: left;
+  //background-repeat: no-repeat;
   color: #ffffff;
+  border-radius: 0;
   font-family: "Fjalla One", sans-serif;
   font-size: 2em;
   &:hover {
     color: #000000;
     background-color: #ffffff;
   }
+  .fa-shopping-basket {
+    padding: 0 20px 10px 0px;
+  }
+}
+
+.btncontact__btn {
+  margin-top: 20px;
+  @extend .btncta__btn;
+  padding: 10px;
+  font-size: 1.5em;
+}
+
+.btnmobile__btn {
+  @extend .btncta__btn;
 }
