--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,10 +4,10 @@
 .footer {
   background-color: #000000;
   color: #ffffff;
-  padding: 15px 0;
+  padding: 35px 0;
   .footer--main {
     .footermain__item {
-      height: 370px;
+      height: 390px;
       padding: 25px;
       text-align: center;
       .footermain-item__icon {
@@ -28,21 +28,26 @@
     }
   }
   a {
-    color: $grey;
+    color: #ffffff;
     &:hover {
       text-decoration: none;
-      color: #ffffff;
+      color: $pink;
     }
   }
   li {
     padding: 10px 0;
   }
-  .mobilephone__each {
+  .mobilephone__desktop {
+    display: block;
     margin: 15px 0;
+  }
+  .mobilephone__mobile {
+    display: none;
   }
   .copyright {
     p {
       font-size: 12px;
+      color: $grey;
     }
   }
 }
