--- a/sass/components/webforms/_kalfsvlees.scss
+++ b/sass/components/webforms/_kalfsvlees.scss
@@ -1,6 +1,7 @@
 //================================
-// @@ ++ Sidebars
+// @@ ++ 
 //================================
 
-.layout--sidebar--first {
+.webform-component--kalfsvlees---eigen-samenstelling {
+  
 }
