--- a/sass/state/_mediaquery.scss
+++ b/sass/state/_mediaquery.scss
@@ -35,6 +35,14 @@
   .corebusiness__region {
     margin: 10px 0;
   }
+
+  .section--page {
+    display: block;
+    margin-top: 75px;
+    .layout--content {
+      margin-bottom: 25px;
+    }
+  }
   h2 {
     font-size: 2.5em;
   }
