--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@
 @import "components/navbar";
 @import "components/webforms/forms-global";
 @import "components/webforms/contact-form";
+@import "components/webforms/kalfsvlees";
 
 //=======================
 // @@ ++ State
