--- a/sass/components/webforms/_forms-global.scss
+++ b/sass/components/webforms/_forms-global.scss
@@ -11,14 +11,29 @@
   }
 }
 
-  input[type=text] {
-    width: 100%;
-    padding: 5px;
-    border: none;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
+input[type=text] {
+  width: 100%;
+  padding: 5px;
+  border: none;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
 
-  input[type=email]{
-    @extend input[type=text];
+input[type=email] {
+  @extend input[type=text];
+}
+
+fieldset.collapsible {
+  margin-top: 25px;
+  border: solid 1px $grey;
+  padding: 20px;
+  .fieldset-legend {
+    a {
+      color: #ffffff;
+      &:hover {
+        color: $grey;
+        text-decoration: none;
+      }
+    }
   }
+}
