--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,13 +9,11 @@
   padding: 10px 10px 0px 10px;
   background-color: transparent;
   border: solid 1px #ffffff;
-  //background-image: url("../images/icon_rund.png" );
-  //background-position: left;
-  //background-repeat: no-repeat;
   color: #ffffff;
   border-radius: 0;
   font-family: "Fjalla One", sans-serif;
   font-size: 2em;
+  text-align: center;
   &:hover {
     color: #000000;
     background-color: #ffffff;
